Upgraded JVM to 25.0.2 Upgraded kotlin to 2.3.10 Upgraded ktor to 3.4.0 Upgrade gradle to 9.3.1 Minor bumps to all deps Handled breaking changes